@@ -1,3 +1,9 @@
+2004-10-21  Chris Toshok  <toshok@ximian.com>
+
+	* DebuggingService.cs: return String.Empty from CurrentFilename if
+	the frame's SourceAddress is null.  Likewise, return -1 from
+	CurrentLineNumber in this case.
+
 2004-06-25  Todd Berman  <tberman@off.net>
 
 	* DebuggingService.cs: sync with cvs debugger.
